--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "ffmpeg-static": "^5.3.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "music-metadata": "^11.10.3",
     "openai": "^6.10.0"
   },
   "devDependencies": {
