--- a/functions/package.json
+++ b/functions/package.json
@@ -18,10 +18,12 @@
     "ffmpeg-static": "^5.3.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "luxon": "^3.7.2",
     "music-metadata": "^11.10.3",
     "openai": "^6.10.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.7.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
