terms, privacy, landing page

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "medswipe-648ee",
+    "default": "khutbah-notes-ai",
     "production": "khutbah-notes-ai"
   },
   "targets": {},
