--- a/Khutbah-Notes-AI-Info.plist
+++ b/Khutbah-Notes-AI-Info.plist
@@ -7,5 +7,16 @@
 		<string>remote-notification</string>
 		<string>audio</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.medswipeapp.Khutbah-Notes-AI</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>khutbahnotesai</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
