--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,9 @@
       ]
     }
   ],
+  "firestore": {
+    "rules": "firestore.rules"
+  },
   "hosting": {
     "public": "public",
     "ignore": [
