--- a/functions/package.json
+++ b/functions/package.json
@@ -16,12 +16,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@egoist/youtube-transcript-plus": "^1.1.2",
     "ffmpeg-static": "^5.3.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "luxon": "^3.7.2",
     "music-metadata": "^11.10.3",
-    "openai": "^6.10.0"
+    "openai": "^6.10.0",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "@types/luxon": "^3.7.1",
